--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<div id="wsite-content" class="wsite-elements wsite-not-footer">
-	<span class="imgPusher" style="float:left;height:0px"></span><span style="display: table;width:auto;position:relative;float:left;max-width:100%;;clear:left;margin-top:11px;*margin-top:22px"><a><img src="/uploads/3/4/6/9/34693486/1445839877.jpg" style="margin-top: 5px; margin-bottom: 10px; margin-left: 0px; margin-right: 10px; border-width:0; max-width:100%" alt="Picture" class="galleryImageBorder wsite-image"></a><span style="display: table-caption; caption-side: bottom; font-size: 90%; margin-top: -10px; margin-bottom: 10px; text-align: center;" class="wsite-caption"></span></span>
-<div class="paragraph" style="text-align:left;display:block;"><ul><li>Senior Manager, Software Engineering&nbsp;at <a href="https://www.tableau.com/" target="_blank">Tableau</a>&nbsp;</li><li><span>Voracious&nbsp;reader, lazy <a href="http://www.goodreads.com/user/show/15623875-sankalp-shere" target="_blank">updater</a></span></li><li><span>Enjoys&nbsp;</span><a href="http://sankalpshere.blogspot.com/" target="_blank">scribbling</a><span>, especially&nbsp;on&nbsp;</span><a href="http://tek-that.blogspot.com/" target="_blank">technology</a></li><li><span>​</span><a href="http://instagram.com/sankalpshere" target="_blank">Shutterbug&nbsp;</a><span>with strong&nbsp;</span><a href="http://www.tripadvisor.com/members/196sankalps" target="_blank">wanderlust</a></li><li><span>Loves outdoors</span></li></ul></div>
-<hr style="width:100%;clear:both;visibility:hidden;">
+<div id="content">
+<ul>
+	<li><img src="1445839877.jpeg" alt="profile_pic"/></li>
+	<li>Senior Manager, Software Engineering&nbsp;at <a href="https://www.tableau.com/" target="_blank">Tableau</a>&nbsp;</li>
+	<li><span>Voracious&nbsp;reader, lazy <a href="http://www.goodreads.com/user/show/15623875-sankalp-shere" target="_blank">updater</a></span></li>
+	<li><span>Enjoys&nbsp;</span><a href="http://sankalpshere.blogspot.com/" target="_blank">scribbling</a><span>, especially&nbsp;on&nbsp;</span><a href="http://tek-that.blogspot.com/" target="_blank">technology</a></li><li><span>​</span><a href="http://instagram.com/sankalpshere" target="_blank">Shutterbug&nbsp;</a><span>with strong&nbsp;</span><a href="http://www.tripadvisor.com/members/196sankalps" target="_blank">wanderlust</a></li><li><span>Loves outdoors</span></li>
+</ul>
 </div>
+
