--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div id="content">
+	<span class="align:center"><img src="1445839877.jpeg" alt="profile_pic"/></li><span>
 <ul>
-	<li><img src="1445839877.jpeg" alt="profile_pic"/></li>
 	<li>Senior Manager, Software Engineering&nbsp;at <a href="https://www.tableau.com/" target="_blank">Tableau</a>&nbsp;</li>
 	<li><span>Voracious&nbsp;reader, lazy <a href="http://www.goodreads.com/user/show/15623875-sankalp-shere" target="_blank">updater</a></span></li>
 	<li><span>Enjoys&nbsp;</span><a href="http://sankalpshere.blogspot.com/" target="_blank">scribbling</a><span>, especially&nbsp;on&nbsp;</span><a href="http://tek-that.blogspot.com/" target="_blank">technology</a></li>
