--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div id="content">
-	<span class="text-align: center; margin:auto"><img src="1445839877.jpeg" alt="profile_pic"/></li><span>
+	<img class="profile_image" src="1445839877.jpeg" alt="profile_pic"/>
 <ul class="text-align: center; margin:auto">
 	<li>Senior Manager, Software Engineering&nbsp;at <a href="https://www.tableau.com/" target="_blank">Tableau</a>&nbsp;</li>
 	<li><span>Voracious&nbsp;reader, lazy <a href="http://www.goodreads.com/user/show/15623875-sankalp-shere" target="_blank">updater</a></span></li>
