--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div id="content">
+<!--<div id="content">
 	<img class="profile_image" src="1445839877.jpeg" alt="profile_pic"/>
 <ul class="text-align: center; margin:auto">
 	<li>Senior Manager, Software Engineering&nbsp;at <a href="https://www.tableau.com/" target="_blank">Tableau</a>&nbsp;</li>
@@ -7,5 +7,17 @@
 	<li><span>​</span><a href="http://instagram.com/sankalpshere" target="_blank">Shutterbug&nbsp;</a><span>with strong&nbsp;</span><a href="http://www.tripadvisor.com/members/196sankalps" target="_blank">wanderlust</a></li>
 	<li><span>Loves outdoors</span></li>
 </ul>
-</div>
+</div>-->
 
+<div class="container">
+  <div class="image">
+    <img src="1445839877.jpeg">
+  </div>
+  <div class="text">
+	<li>Senior Manager, Software Engineering&nbsp;at <a href="https://www.tableau.com/" target="_blank">Tableau</a>&nbsp;</li>
+	<li><span>Voracious&nbsp;reader, lazy <a href="http://www.goodreads.com/user/show/15623875-sankalp-shere" target="_blank">updater</a></span></li>
+	<li><span>Enjoys&nbsp;</span><a href="http://sankalpshere.blogspot.com/" target="_blank">scribbling</a><span>, especially&nbsp;on&nbsp;</span><a href="http://tek-that.blogspot.com/" target="_blank">technology</a></li>
+	<li><span>​</span><a href="http://instagram.com/sankalpshere" target="_blank">Shutterbug&nbsp;</a><span>with strong&nbsp;</span><a href="http://www.tripadvisor.com/members/196sankalps" target="_blank">wanderlust</a></li>
+	<li><span>Loves outdoors</span></li>
+  </div>
+</div>
